--- a/src/components/Service.css
+++ b/src/components/Service.css
@@ -8,10 +8,20 @@
     max-width: 1200px;
     margin: 0 auto;
   }
+
   
   h2 {
     font-size: 36px;
     margin-bottom: 20px;
+    color : black;
+  }
+
+  .service-container h2 span {
+    color: red;
+  }
+
+  .service-container p {
+    margin-bottom: 40px; 
   }
   
   .services-grid {
@@ -27,45 +37,26 @@
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-  }
+  } 
   
-  .service-icon {
-    font-size: 40px;
-    color: #ff3d00;
-    margin-bottom: 15px;
-  }
   
   .service-card h3 {
     font-size: 24px;
     margin-bottom: 10px;
+    color : black;
   }
   
   .service-card p {
     font-size: 16px;
-    color: #666;
+    color: black;
+  }
+
+  .icon-box img {
+    width: 30px; /* Adjust the width to make the image smaller */
+  height: auto; /* Maintain the aspect ratio of the image */
+  margin-bottom: 15px; /* Adds space below the image */
   }
   
   
-  .client-reviews {
-    margin-top: 50px;
-  }
   
-  .review {
-    background-color: white;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    margin: 10px;
-  }
-  
-  .review p {
-    font-size: 18px;
-    color: #333;
-    margin-bottom: 10px;
-  }
-  
-  .review h4 {
-    font-size: 20px;
-    color: #ff3d00;
-  }
   
